[package]
name = "microservice-learning"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.1"
tokio = { version = "1.28.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
base64 = "0.22.1"
openssl = "0.10.45"  # Using OpenSSL instead of pure Rust RSA
