[package]
name = "microservice-learning"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.1"
tokio = { version = "1.28.1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
base64 = "0.22.1"
openssl = "0.10.45"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
